@@ -1,6 +1,7 @@
 <pre>
 2007-XX-XX:
 	* version 0.5.2
+	* separated search and Ex command history
 	* added 'visualbellstyle' for styling/hiding the visual bell
 	* merge the existing status bar with the standard FF status bar so that
 	  security information and extension buttons are included
@@ -13,7 +14,8 @@
 	  highlighted text strings when 'hlsearch' is set
 	* added 'linksearch' option to restrict page searches to link text - \U
 	  and \u can be used in the search pattern to override 'linksearch'
-	* vimperator trys to stay in command mode after loading pages instead of having a text field focused
+	* vimperator trys to stay in command mode after loading pages instead
+	  of having a text field focused
 	* added a visual bell and replaced 'beep' with 'visualbell'
 	* added vimperator logo (can be seen in the addons manager)
 	* added 'hlsearch','incsearch', 'ignorecase' and 'smartcase' options
